Adjust new shift popup placement to not directly overlap with edit, add isDragging tracker and highlight trash td if dragging or selecting. Fix for removal of table headers

--- a/app/assets/stylesheets/week_view.css.sass
+++ b/app/assets/stylesheets/week_view.css.sass
@@ -1,6 +1,6 @@
 @import colors
 #week-view
-  padding: 30px
+  padding: 0px 20px 20px 20px
   width: 100%
   height: 100%
   background: lighten(lightgrey, 15)
@@ -22,6 +22,9 @@
     min-height: 700px
 
     .page-buttons
+      div
+        display: inline-block
+        margin: 0px 10px
       button
         margin: 20px 3px
         &:last-of-type
@@ -29,14 +32,15 @@
         i
           font-size: 15px
 
-    h3, summary
-      margin-left: 10px
+    h4
+      margin-top: 30px
+
 
     summary
       border: 2px solid lightgrey
       border-radius: 3px
       padding-left: 10px
-      margin: 20px auto
+      margin: 20px 0px
       background: rgba(255,255,255, 0.7)
       z-index: 1002
       &:hover:not(i)
@@ -53,44 +57,68 @@
           cursor: pointer
 
         &.fa-plus
-          display: none
           &:hover
             color: $level-2-color
         &.fa-minus
+          display: none
           &:hover
             color: $level-1-color
       p.danger
         color: $level-1-color
 
+      ng-form
+        display: none
       .summary-footer
         position: absolute
         bottom: 0
 
+    .table-headers
+      border: 2px solid lighten(lightgrey, 5)
+      border-bottom: none
+      border-radius: 1px
+
+      div
+        padding: 15px 0px 5px
+        text-align: center
+        font-weight: bold
+        display: inline-block
+        font-size: 16px
+
+      .staff
+        width: 15%
+      .days
+        width: 11%
+      .trash
+        width: 8%
+        i
+          font-size: 20px
 
     .scrollable
       overflow: auto
       position: relative
       width: 100%
       max-height: 600px
-      border: 2px solid lightgrey
+      border: 2px solid lighten(lightgrey, 5)
+      border-top: none
 
     table
       height: 300px
       width: 100%
       margin: 0px
-      border: 1px solid lightgrey
-      thead
-        background: lighten(lightgrey, 10)
-        th:not(:first-of-type)
-          text-align: center
-        th
-          font-size: 16px
-          border-bottom: 1px solid lighten(lightgrey, 5)
-          border-right: 1px solid lighten(lightgrey, 5)
-          small
-            font-weight: normal
-        th:last-of-type
-          font-size: 20px
+
+      // thead
+      //   background: lighten(lightgrey, 10)
+      //   th:not(:first-of-type)
+      //     text-align: center
+      //   th
+      //     font-size: 16px
+      //     border-bottom: 1px solid lighten(lightgrey, 5)
+      //     border-right: 1px solid lighten(lightgrey, 5)
+      //     small
+      //       font-weight: normal
+
+      //   th:last-of-type
+      //     font-size: 20px
 
       tbody
         .employee-name
@@ -105,18 +133,20 @@
 
         tr
           td:first-of-type
-            width: 250px !important
+            width: 15% !important
             small
               font-weight: normal
           td
             padding: 5px
             border-right: 1px solid lighten(lightgrey, 5)
-            width: 10% !important
+            width: 11% !important
             overflow: hidden
             &.rubbish-td
               color: white
               font-size: 30px
-              background: lighten($level-1-color, 10%)
+              background: lighten($level-1-color, 30%)
+              &.highlight
+                background: lighten($level-1-color, 10%)
               i
                 line-height: 50px
               &:hover
@@ -126,7 +156,7 @@
             text-align: center
 
           td:last-of-type
-            width: 4% !important
+            width: 8% !important
 
 
       .mark
@@ -168,7 +198,7 @@
 
   .popup
     overflow: scroll
-    z-index: 1000
+    z-index: 1002
     position: absolute
     background: lighten(whitesmoke, 1)
     width: 40%
@@ -178,6 +208,9 @@
     border-radius: 3px
     top: 40%
     left: 40%
+    &.new
+      top: 45%
+      left: 45%
     h3
       margin-top: 10px
 
